@@ -86,6 +86,8 @@ antiquotations in control symbol notation, e.g. \<^const_name> becomes
 * Document preparation with skip_proofs option now preserves the content
 more accurately: only terminal proof steps ('by' etc.) are skipped.
 
+* More explicit errors from latex process.
+
 
 *** HOL ***
 
